# just-another-url-shortener

./: .env.sample  .gitignore  Makefile  docker-compose.yml  readme.md
src/: .flake8  Dockerfile  config.py  exceptions.py  main.py  pyproject.toml
src/api/: shemas.py  shortener.py
src/db/: pool.py  tables.py
src/migrations/: env.py
src/migrations/versions/: 1ec00648a77b_create_short_link_table.py
src/repositories/: base.py  short_links.py
src/services/: shortener.py
